--- a/deploy-compose.yml
+++ b/deploy-compose.yml
@@ -9,7 +9,6 @@ services:
     ports:
       - 3080:3080
     depends_on:
-      - mongodb
       - rag_api
     restart: always
     extra_hosts:
@@ -19,7 +18,7 @@ services:
     environment:
       - HOST=0.0.0.0
       - NODE_ENV=production
-      - MONGO_URI=mongodb://mongodb:27017/LibreChat
+      - MONGO_URI=${MONGO_URI}
       - MEILI_HOST=http://meilisearch:7700
       - RAG_PORT=${RAG_PORT:-8000}
       - RAG_API_URL=http://rag_api:${RAG_PORT:-8000}
@@ -42,15 +41,7 @@ services:
     restart: always
     volumes:
       - ./client/nginx.conf:/etc/nginx/conf.d/default.conf
-  mongodb:
-    container_name: chat-mongodb
-    # ports:  # Uncomment this to access mongodb from outside docker, not safe in deployment
-    #   - 27018:27017
-    image: mongo
-    restart: always
-    volumes:
-      - ./data-node:/data/db
-    command: mongod --noauth
+
   meilisearch:
     container_name: chat-meilisearch
     image: getmeili/meilisearch:v1.12.3
@@ -64,6 +55,7 @@ services:
       - MEILI_NO_ANALYTICS=true
     volumes:
       - ./meili_data_v1.12:/meili_data
+
   vectordb:
     image: ankane/pgvector:latest
     environment:
@@ -73,6 +65,7 @@ services:
     restart: always
     volumes:
       - pgdata2:/var/lib/postgresql/data
+
   rag_api:
     image: ghcr.io/danny-avila/librechat-rag-api-dev-lite:latest
     environment:
