Add mongodb override to deploy compose
From the docs, this is the correct way to use Mongo Atlas with LibreChat

--- a/deploy-compose.yml
+++ b/deploy-compose.yml
@@ -30,6 +30,11 @@ services:
       - ./uploads:/app/uploads
       - ./logs:/app/api/logs
 
+  mongodb:
+    image: tianon/true
+    command: ""
+    entrypoint: ""
+
   meilisearch:
     container_name: chat-meilisearch
     image: getmeili/meilisearch:v1.12.3
